fix display card text alignment

--- a/client/src/app/components/display-component/display-component.css
+++ b/client/src/app/components/display-component/display-component.css
@@ -1,4 +1,5 @@
-.submit-button { border-radius: 10px; transform: scale(1); transition: 0.5s; }
+.submit-button { border-radius: 10px; transform: scale(1); transition: 0.5s; font-size: large; }
 .submit-button:hover { transform: scale(1.5); transition: 0.5s; }
 
-.display-card { border-radius: 10px; text-align: center; }
+.display-card { border-radius: 10px; text-align: center; width: 30vw; }
+mat-card-header { justify-content: center; text-align: center; }
